First version of the RGB color game

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 				<div id="content">
 					<h1>HintMyMeal</h1>
 					<hr>
-					<h3>Give us a hint and we will find the right meal for you</h3>
+					<h3>Give us a hint and we will find you the right meal</h3>
 					<button class="get-started-button"><i class="fas fa-pizza-slice"></i> Get Started!</button>
 				</div>
 			</div>
